--- a/SecHack365_project/package.json
+++ b/SecHack365_project/package.json
@@ -30,10 +30,13 @@
     "@babel/preset-typescript": "^7.18.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "autoprefixer": "^10.4.21",
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.0",
     "html-webpack-plugin": "^5.5.0",
+    "postcss": "^8.5.6",
     "style-loader": "^3.3.0",
+    "tailwindcss": "^4.1.14",
     "typescript": "^4.9.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
