--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,22 @@ audit.log
 # Temporary files
 *.tmp
 *.temp
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn-integrity
+
+# React build
+SecHack365_project/dist/
+SecHack365_project/build/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
