feat: PostgreSQL移行とセキュリティ強化
- SQLiteからPostgreSQLに移行
- SQLAlchemy + AlembicでORMとマイグレーション実装
- 機密情報の漏えいデータを削除
- 環境変数による設定管理
- セキュリティヘッダー実装
- 監査ログ機能追加
- Fakerを使ったダミーデータ生成
- Docker Composeで開発環境構築
- .gitignore強化で機密ファイル再混入防止

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,32 @@ SecHack365_project/build/
 .env.development.local
 .env.test.local
 .env.production.local
+
+# 機密情報ファイル
+*_keys.json
+*_credentials.json
+user_db.json
+demo_*.json
+patients.json
+records.json
+medical_records.json
+
+# データベースファイル
+*.db
+*.sqlite3
+postgres_data/
+
+# ログファイル
+logs/
+*.log
+
+# アップロードファイル
+uploads/
+
+# バックアップファイル
+*.backup
+*.bak
+
+# 一時ファイル
+*.tmp
+*.temp
