--- a/env.example
+++ b/env.example
@@ -1,71 +1,35 @@
-# 患者情報共有システム - 環境変数設定例
-# このファイルをコピーして .env として使用してください
+# データベース設定
+DATABASE_URL=postgresql://medical_user:medical_password@localhost:5432/medical_records
 
-# === セキュリティ設定 ===
-# Flaskの秘密鍵（本番環境では強力なランダム文字列に変更）
-SECRET_KEY=your-secret-key-here-change-in-production
+# セキュリティ設定
+SECRET_KEY=your-secret-key-here
+JWT_SECRET_KEY=your-jwt-secret-key-here
 
-# WebAuthn設定
-WEBAUTHN_RP_ID=localhost
-WEBAUTHN_RP_NAME=患者情報共有システム
-WEBAUTHN_ORIGIN=http://localhost:5001
+# 暗号化設定
+ENCRYPTION_KEY=your-32-character-encryption-key-here
 
-# === サーバー設定（安全なデフォルト） ===
-# ホスト設定（デフォルト: 127.0.0.1 = ローカルのみ）
-HOST=127.0.0.1
+# MFA設定
+MFA_ISSUER_NAME=Medical Records System
 
-# ポート設定
-PORT=5001
+# Redis設定
+REDIS_URL=redis://localhost:6379/0
 
-# デバッグモード（本番環境では必ずFalse）
-FLASK_DEBUG=False
-
-# SSL使用（開発環境ではFalse、本番ではTrue）
-USE_SSL=False
-
-# === データベース設定 ===
-# データベースURL（現在はJSONファイルを使用）
-DATABASE_URL=sqlite:///patient_info.db
-
-# === 暗号化設定 ===
-# 暗号化キーのパスフレーズ（本番環境では強力なパスフレーズに変更）
-ENCRYPTION_KEY_PASSPHRASE=your-encryption-passphrase-here
-
-# === サーバー設定 ===
-# サーバーポート
-PORT=5001
-HOST=0.0.0.0
-
-# === 開発設定 ===
-# デバッグモード（本番環境では False に設定）
-FLASK_DEBUG=True
-FLASK_ENV=development
-
-# === 監査ログ設定 ===
-# ログレベル
+# ログ設定
 LOG_LEVEL=INFO
+LOG_FILE=logs/app.log
 
-# === 外部API設定（将来的な拡張用） ===
-# FHIRサーバーURL
-FHIR_SERVER_URL=https://fhir.example.com/fhir
+# 本番環境設定
+FLASK_ENV=development
+FLASK_DEBUG=True
 
-# 通知サービス設定
-NOTIFICATION_SERVICE_URL=https://notification.example.com
-NOTIFICATION_API_KEY=your-notification-api-key
+# セキュリティ設定
+SESSION_COOKIE_SECURE=False
+SESSION_COOKIE_HTTPONLY=True
+SESSION_COOKIE_SAMESITE=Lax
 
-# === セキュリティポリシー設定 ===
-# セッションタイムアウト（秒）
-SESSION_TIMEOUT=3600
+# CORS設定
+CORS_ORIGINS=http://localhost:3000,http://localhost:5000
 
-# パスワードポリシー
-MIN_PASSWORD_LENGTH=8
-REQUIRE_SPECIAL_CHARS=True
-REQUIRE_NUMBERS=True
-REQUIRE_UPPERCASE=True
-
-# === アクセシビリティ設定 ===
-# デフォルトのアクセシビリティ設定
-DEFAULT_LARGE_TEXT=False
-DEFAULT_FURIGANA=False
-DEFAULT_SIMPLE_MODE=False
-DEFAULT_MULTILANG=False
+# ファイルアップロード設定
+MAX_CONTENT_LENGTH=16777216  # 16MB
+UPLOAD_FOLDER=uploads
